--- a/src/index.html
+++ b/src/index.html
@@ -11,71 +11,20 @@
   <meta http-equiv="cleartype" content="on" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <link href="assets/css/font.css" rel="stylesheet" />
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/css/font.css" rel="stylesheet" />
+  <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Owl javascript -->
-  <script src="assets/js/owl.carousel.js"></script>
+  <script src="./assets/js/owl.carousel.js"></script>
   <!-- Owl Stylesheets -->
-  <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
 
-  <link href="assets/css/styles.css" rel="stylesheet" />
+  <link href="./assets/css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
   <app-root></app-root>
-  <script>
-    $(document).ready(function () {
-      $('.event-carousel').owlCarousel({
-        rtl: true,
-        loop: false,
-        margin: 10,
-        responsiveClass: true,
-        responsive: {
-          0: {
-            items: 1,
-            nav: true
-          },
-          600: {
-            items: 2,
-            nav: false
-          },
-          1000: {
-            items: 3,
-            nav: true,
-            loop: false,
-            dots: false,
-            margin: 20
-          }
-        }
-      })
-      $('.main-carousel').owlCarousel({
-        rtl: true,
-        loop: false,
-        margin: 10,
-        responsiveClass: true,
-        responsive: {
-          0: {
-            items: 1,
-            nav: true
-          },
-        }
-      })
-      $('.box-carousel').owlCarousel({
-        rtl: true,
-        loop: false,
-        margin: 10,
-        responsiveClass: true,
-        responsive: {
-          0: {
-            items: 1,
-            nav: true
-          },
-        }
-      })
-    })
-  </script>
 </body>
 
 </html>
