slider issue fixed

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
   <!-- Owl javascript -->
   <script src="assets/js/owl.carousel.js"></script>
   <!-- Owl Stylesheets -->
-  <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+  <!-- <link rel="stylesheet" href="assets/css/owl.carousel.min.css"> -->
+  <!-- <link rel="stylesheet" href="assets/css/owl.theme.default.min.css"> -->
 
   <link href="assets/css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
   <app-root></app-root>
-  <script>
+  <!-- <script>
     $(document).ready(function () {
       $('.event-carousel').owlCarousel({
         rtl: true,
@@ -58,6 +58,7 @@
         responsive: {
           0: {
             items: 1,
+            loop: false,
             nav: true
           },
         }
@@ -75,7 +76,6 @@
         }
       })
     })
-  </script>
+  </script> -->
 </body>
-
 </html>
